deploy/k8s/staging/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-authorization-http-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-authorization-http-service
  template:
    metadata:
      labels:
        app: gau-authorization-http-service
    spec:
      containers:
        - name: gau-authorization-http-service
          image: iamqbao/gau_authorization_service:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"

---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: redis-authorization-deployment
#  namespace: bao-${DEPLOY_ENV}-env
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: redis-authorization-service
#  template:
#    metadata:
#      labels:
#        app: redis-authorization-service
#    spec:
#      containers:
#        - name: redis-authorization-service
#          envFrom:
#            - configMapRef:
#                name: gau-authorization-${DEPLOY_ENV}-config
#            - secretRef:
#                name: gau-authorization-${DEPLOY_ENV}-secret
#          image: redis:7.2-alpine
#          resources:
#            requests:
#              cpu: "100m"
#              memory: "256Mi"
#            limits:
#              cpu: "200m"
#              memory: "512Mi"
